# 2025-caos

./: .gitignore  .gitmodules  README.md
.github/workflows/: deploy.yaml
10_socket/: socket.ipynb  socket.slides.html
11_epoll/: epoll.ipynb  epoll.slides.html
12_dynamic/: dynamic.ipynb  dynamic.slides.html
12_dynamic/examples/py-matrix/: CMakeLists.txt  matrix.c  tests.py
13_isolation/: isolation.ipynb  isolation.slides.html
14_devtools_2/: devtools_2.ipynb  devtools_2.slides.html
1_devtools/: devtools.ipynb  devtools.slides.html  main.c  main.i  main.s
2_numbers/: c_.ipynb  datatypes.ipynb  datatypes.slides.html
3_files/: files.ipynb  files.slides.html  investigate  investigate.c
4_x86/: notes.txt  x86.slides.html  x86.slides.ipynb
5_arm/: arm.slides.html  arm.slides.ipynb
6_mmap/: mmap.ipynb  mmap.slides.html  mmap.slides.ipynb  notes.txt
7_fork/: fork.ipynb  fork.slides.html
8_mutex/: mutex.ipynb  mutex.slides.html
9_pipe/: pipe.ipynb  pipe.slides.html
docs/: 404.html  en.search-data.min.039d5f622e76056b3430ba1bc6aeb2cabce3a8fcba0f4ef3b1c85f6d9c32291d.json  en.search-data.min.03cabf96df86254fefb03594abd9d99d0601b28bfaf986cf71366cee7cf8ad3c.json  en.search-data.min.0977e2081970d3bb8e62b456e0867da044584b450ac6ee7c0bb7832c86f46240.json  en.search-data.min.0abcb56d6e1eda06a90c07146e0d42470edbb5c7deb147b8068e9a4e3740eb58.json  en.search-data.min.0cc02dd94d8532cad4c8c943b68883a4ba2e1146d3cde7f988eb262775b7ce1d.json  en.search-data.min.0dfd2e93a213c054c2b7cd9a74c01242e18ebccdc1da3f7af9a124c97465a568.json  (+323 more)
notes/: hugo.toml
(+722 files in other folders)
